--- a/react-austin-midnight-dashboard-vite-app/package.json
+++ b/react-austin-midnight-dashboard-vite-app/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-tabs": "^5.1.0",
+    "use-react-router-breadcrumbs": "^3.2.1",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
